[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "Real-world OpenEnv environment for email triage."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "openai>=2.7.2",
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
